--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.8", features = ["derive"] }
 regex = "1.10.4"
 reqwest = "0.12.4"
 tokio = { version = "1.37.0", features = ["full"] }
