--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
+colored = "2.1.0"
 regex = "1.10.4"
 reqwest = "0.12.4"
 tokio = { version = "1.37.0", features = ["full"] }
